# src/api/controllers/users.js
@@ -1,5 +1,10 @@
+const mongoose = require('mongoose');
+
 const { userServices } = require("../service/users")
-const { createUser, findUser } = userServices;
+const { createUser, findUser, updateUser } = userServices;
+
+const { taskServices } = require("../service/tasks")
+const { createTask } = taskServices;
 
 const commonFunction = require("../helper/utils");
 const userTypeEnums = require("../enums/userType");
@@ -116,5 +121,73 @@ exports.login = async (req, res, next) => {
     } catch (error) {
         // Return error response if an error occurs
         return res.status(500).send({ status: false, message: error.message });
+    }
+}
+
+/**
+* @swagger
+* /users/update-user-and-add-task:
+*   put:
+*     summary: Update user and add
+*     tags:
+*       - User Section
+*     description: Update user and add
+*     produces:
+*       - application/json
+*     parameters:
+*       - name: token
+*         description: user token
+*         in: header
+*         required: true
+*     requestBody:
+*       required: true
+*       content:
+*         application/json:
+*           schema:
+*             $ref: '#/definitions/updateUserTask'
+*     responses:
+*       '200':
+*         description: OK
+*       '401':
+*         description: Unauthorized
+*       '402':
+*         description: Bad Request
+*       '500':
+*         description: Internal Server Error
+*/
+exports.updateUserAndAddTask = async (req, res, next) => {
+    const session = await mongoose.startSession();
+
+    try {
+        session.startTransaction();
+
+        let { email, name, profilePicture, bio, task_title, task_description, task_dueDate } = req.body;
+
+        // If profile picture is provided, upload it to Cloudinary
+        if (profilePicture) {
+            profilePicture = await commonFunction.uploadImageCloudinary(profilePicture);
+        }
+
+        // Update user details
+        await updateUser(req.userId, { email, name, profilePicture, bio }, { session });
+
+        // Create a new task
+        await createTask({ title: task_title, description: task_description, dueDate: task_dueDate }, { session });
+
+        // Commit the transaction
+        await session.commitTransaction();
+        console.log('Transaction committed successfully');
+
+        // Return success response with token and user details
+        return res.status(201).send({ status: true, message: "User updated and task added successfully" });
+    } catch (error) {
+        await session.abortTransaction();
+        console.error('Transaction aborted:', error);
+
+        // Return error response if an error occurs
+        return res.status(500).send({ status: false, message: "An error occurred while updating user and adding task" });
+    } finally {
+        // End the session
+        session.endSession();
     }
 }
