# src/api/helper/validationSchema.js
@@ -10,7 +10,7 @@ const userSchema = Joi.object({
     name: Joi.string().optional(),
     email: Joi.string()
         .email({ minDomainSegments: 2, tlds: { allow: ["com", "net", "in"] } })
-        .message("Email is not valid").required(),
+        .message("Please provide a valid email address."),
     password: joiPassword
         .string()
         .minOfSpecialCharacters(1)
@@ -70,8 +70,30 @@ const taskUpdateSchema = Joi.object({
     }),
 });
 
+const userTaskSchema = Joi.object({
+    name: Joi.string().optional(),
+    email: Joi.string()
+      .email({ minDomainSegments: 2, tlds: { allow: ["com", "net", "in"] } })
+      .message("Please provide a valid email address."),
+    profilePicture: Joi.string().allow('').optional(),
+    bio: Joi.string().allow('').optional(),
+    task_title: Joi.string().required().messages({
+        'any.required': 'Title is required.',
+        'string.empty': 'Title cannot be empty.'
+    }),
+    task_description: Joi.string().required().messages({
+        'any.required': 'Description is required.',
+        'string.empty': 'Description cannot be empty.'
+    }),
+    task_dueDate: Joi.date().iso().required().messages({
+        'any.required': 'Due date is required.',
+        'date.iso': 'Due date must be in ISO format (YYYY-MM-DD).'
+    }),
+});
+
 module.exports = {
     userSchema,
     taskCreateSchema,
-    taskUpdateSchema
+    taskUpdateSchema,
+    userTaskSchema
 };
